update privacy policy

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
       <div class="row justify-content-between">
         <div class="col-12 col-lg-4 m-15px-tb">
           <div class="theme-bg p-25px border-radius-5 white-color">
-            <h5 class="m-20px-b"> ProHost letter </h5>
+            <h5 class="m-20px-b"> ProHost Newsletter </h5>
             <div class="form-group">
               <label class="font-w-500">Join our newsletter</label>
               <input type="text" name="Subscribe" placeholder="Email Address" class="form-control">
