change koresi domain registration page and ekti section add koresi privacy policy page a

--- a/domain-register.html
+++ b/domain-register.html
@@ -128,11 +128,19 @@
 </section>
 <div class="grey-bg content-wrapper-8-5 relative" dir="ltr">
 <div class="container">
-<h4 class="mb-20">Domain Extension Price List</h4>
+<h1 class="mb-20">Domain Extension Price List</h1>
 <div class="row">
 <div class="col-md-12">
 <div class="flex-container">
-
+<div class="flex-row flex-head">
+<div class="flex2">TLD</div>
+<div>Type</div>
+<div>Requirements</div>
+<div>activities</div>
+<div>Processing</div>
+<div>Validity</div>
+<div>Price</div>
+</div>
 <div class="flex-row">
 <div class="flex2">.COM</div>
 <div>Global</div>
