--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -162,6 +162,11 @@
           </h3>
           <p>You acknowledge what is stated in this agreement as soon as you join or purchase any of our services.
           </p>
+           </p>
+          <h3 class="m-25px-b font-alt">Sixth: ProHost Service Providers
+          </h3>
+          <p>We may from time to time partner with other third parties to provide specific services. When the user signs up for these particular services, we may share names, or other contact information that is necessary for the third party to provide these services. These third parties are not allowed to use personally identifiable information except for the purpose of providing these services.
+          </p>
     </div>
   </section>
   <section class="section dark-bg">
