--- a/saudi-domain-registration.html
+++ b/saudi-domain-registration.html
@@ -128,7 +128,8 @@
 </section>
 <div class="grey-bg content-wrapper-8-5 relative" dir="ltr">
 <div class="container">
-<h4 class="mb-20">Domain Extension Price List</h4>
+<h1 class="mb-20 text-center">Domain Extension Price List</h1>
+<h5 class="m-15px-b justify-content-center text-center">ProHost new customers get 40% discount on Saudi domains for new registration, transfer and renewal</h5>
 <div class="row">
 <div class="col-md-12">
 <div class="flex-container">
@@ -137,17 +138,17 @@
 <div>Type</div>
 <div>Requirements</div>
 <div>activities</div>
-<div>Processing</div>
 <div>Validity</div>
-<div>Price</div>
+<div>USD</div>
+<div>SAR</div>
 </div>
 <div class="flex-row">
 <div class="flex2">.SA </div>
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>Public</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -155,8 +156,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>Companies</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -164,8 +165,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>Communications</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -173,8 +174,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>non-profit</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -182,8 +183,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>education</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -191,8 +192,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>medical</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -200,8 +201,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>Schools</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -209,8 +210,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>Individuals</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -218,8 +219,8 @@
 <div>Saudi Arabia</div>
 <div>Documents</div>
 <div>Public</div>
-<div>1 day</div>
 <div>1 Year</div>
+<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 </div>
