Masive change in Menu bar

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <!-- metas -->
 <meta charset="utf-8">
-<meta name="author" content="EraHost" />
+<meta name="author" content="ProHost" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="keywords" content="EraHost" />
-<meta name="description" content="EraHost" />
+<meta name="keywords" content="ProHost" />
+<meta name="description" content="ProHost" />
 <title>ProHost</title>
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
             </li>
-            <li class="nav-item mm-in px-mega"> <a class="nav-link" href="javascript:void(0)">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-mega"> <a class="nav-link" href="javascript:void(0)">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <div class="px-mega-menu mm-dorp-in">
                 <div class="row no-gutters">
                   <div class="col-lg-12">
@@ -34,34 +34,23 @@
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
                           <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                          <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
-                          <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
                           <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
-                          <li><a href="email-hosting.html">Email Hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Servers & Cloud</h6>
+                        <h6 class="mm-title">Cloud VPS Hosting</h6>
                         <ul class="mm-link">
-                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                           <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                           <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Dadicated Server</h6>
+                        <h6 class="mm-title">Reseller Hosting</h6>
                         <ul class="mm-link">
-                          <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
-                          <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
+                          <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
+                          <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
                         </ul>
-                      </div>
-                      <div class="col-lg-3">
-                        <h6 class="mm-title">Security & Management</h6>
-                        <ul class="mm-link">
-                          <li><a href="server-management.html">Server Management & Monitoring</a></li>
-                          <li><a href="cyber-security.html">Cyber Security</a></li>
-                        </ul>
-                      </div>
+                      </div>                      
                     </div>
                   </div>
                 </div>
@@ -74,17 +63,21 @@
                 <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Support</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="https://my.prohost.sa/submitticket.php">Open Ticket</a></li>
-                <li><a href="https://my.prohost.sa/supporttickets.php">Ticket</a></li>
-                <li><a href="https://my.prohost.sa/announcements">News</a></li>
-                <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
-                <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
+                <li><a href="search-engine-optimisation.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
+                <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
+                <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
             </li>
-            <li class="nav-item"> <a class="nav-link" href="about-us.html">About Us</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="contact-us.html">Contact Us</a> </li>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="search-engine-optimisation.html">SEO</a></li>
+                <li><a href="cyber-security.html">Cyber Secuirty</a></li>
+                <li><a href="server-management.html">Server Management & Monitoring</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="email-hosting.html">Email Hosting</a></li>
           </ul>
           <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
       </div>
