--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
                           <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                          <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
@@ -50,7 +49,13 @@
                           <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
                           <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
                         </ul>
-                      </div>                      
+                      </div>
+                      <div class="col-lg-3">
+                        <h6 class="mm-title">SQL Hosting</h6>
+                        <ul class="mm-link">
+                          <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
+                        </ul>
+                      </div>                       
                     </div>
                   </div>
                 </div>
