change index.html footer

--- a/index.html
+++ b/index.html
@@ -522,23 +522,21 @@
       <div class="row justify-content-between">
         <div class="col-12 col-lg-4 m-15px-tb">
           <div class="theme-bg p-25px border-radius-5 white-color">
-            <h5 class="m-20px-b"> ProHost Newsletter </h5>
-            <div class="form-group">
-              <label class="font-w-500">Join our newsletter</label>
-              <input type="text" name="Subscribe" placeholder="Email Address" class="form-control">
-              <button class="m-btn m-btn-theme2nd w-100 m-btn-radius m-10px-t">Subscibe</button>
-            </div>
-            <p class="font-small m-0px">We have strict anti-spam policy and send only one newsletter each month!</p>
+            <img class="logo-light" alt="" title="" src="images/logo.png">
+            <h5 class="m-20px-b"> Connect with us</h5>
+            <p class="font-small m-0px">Jeddah - Hera Street - Al-Massa Center - Second Floor - Office 10</p><br>
+            <p class="font-small m-0px"><b>Email: </b>support@prohost.sa, sales@prohost.sa</p><br>
+            <p class="font-small m-0px"><b>Phone: </b>8002444030, +966550243031</p>
           </div>
         </div>
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="reseller-hosting.html">Reseller Hosting</a></li>
-            <li><a href="vps-server.html">Cloud VPS Servers</a></li>
+            <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
+            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="cloud-hosting.html">Email Hosting</a></li>
+            <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2 m-15px-tb">
@@ -556,8 +554,8 @@
           <ul class="list-unstyled links-dark footer-link-2">
               <li><a href="about-us.html">About Us</a></li>
               <li><a href="contact-us.html">Contact Us</a></li>
-              <li><a href="domain-register.html">Domain Register</a></li>
-              <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
+              <li><a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
           </ul>
         </div>
       </div>
@@ -567,10 +565,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
-          <p class="m-0px font-small">© 2023 copyright all right reserved</p>
+          <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
-          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-linkedin-in"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
+          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
         </div>
       </div>
     </div>
