--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="search-engine-optimisation.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
+                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
