change footer all site

--- a/cyber-security-2.html
+++ b/cyber-security-2.html
@@ -8,17 +8,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="keywords" content="ProHost" />
 <meta name="description" content="ProHost" />
-<title>ProHost</title>
+<title>Prohost</title>
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
-<header class="header-nav header-dark header-transparent">
+<header class="header-nav header-white header-transparent">
   <div class="fixed-header-bar"> 
     <div class="container">
-      <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logoi.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
+      <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logo.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse navbar-collapse-overlay" id="navbar-main-collapse">
           <ul class="navbar-nav ml-auto">
@@ -84,7 +84,8 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="email-hosting.html">Email Hosting</a></li>
           </ul>
-          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
+          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> 
+        </div>
       </div>
     </div>
   </div>
@@ -513,7 +514,7 @@
         <h3>Easy to use, fast and reliable</h3>
         <p class="m-0px">Select a plan and go live today</p>
       </div>
-      <div class="col m-15px-tb"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/">Get Started</a>  </div>
+      <div class="col m-15px-tb"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Get Started</a>  </div>
     </div>
   </div>
 </section>
