--- a/wordpress-hosting.html
+++ b/wordpress-hosting.html
@@ -3,12 +3,12 @@
 <head>
 <!-- metas -->
 <meta charset="utf-8">
-<meta name="author" content="EraHost" />
+<meta name="author" content="ProHost" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="keywords" content="EraHost" />
-<meta name="description" content="EraHost" />
-<title>EraHost</title>
+<meta name="keywords" content="ProHost" />
+<meta name="description" content="ProHost" />
+<title>Prohost</title>
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -24,7 +24,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> <i class="fa fa-angle-down px-nav-toggle"></i>
             </li>
-            <li class="nav-item mm-in px-mega"> <a class="nav-link" href="javascript:void(0)">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-mega"> <a class="nav-link" href="javascript:void(0)">Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <div class="px-mega-menu mm-dorp-in">
                 <div class="row no-gutters">
                   <div class="col-lg-12">
@@ -34,34 +34,28 @@
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
                           <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
-                          <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
-                          <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
-                          <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
-                          <li><a href="email-hosting.html">Email Hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Servers & Cloud</h6>
+                        <h6 class="mm-title">Cloud VPS Hosting</h6>
                         <ul class="mm-link">
-                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                           <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                           <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Dadicated Server</h6>
+                        <h6 class="mm-title">Reseller Hosting</h6>
                         <ul class="mm-link">
-                          <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
-                          <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
+                          <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
+                          <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Security & Management</h6>
+                        <h6 class="mm-title">SQL Hosting</h6>
                         <ul class="mm-link">
-                          <li><a href="server-management.html">Server Management & Monitoring</a></li>
-                          <li><a href="cyber-security.html">Cyber Security</a></li>
+                          <li><a href="windows-sql-hosting.html">Offshore Windows SQL Hosting</a></li>
                         </ul>
-                      </div>
+                      </div>                       
                     </div>
                   </div>
                 </div>
@@ -74,24 +68,29 @@
                 <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Support</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="https://my.prohost.sa/submitticket.php">Open Ticket</a></li>
-                <li><a href="https://my.prohost.sa/supporttickets.php">Ticket</a></li>
-                <li><a href="https://my.prohost.sa/announcements">News</a></li>
-                <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
-                <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
+                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
+                <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
+                <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
             </li>
-            <li class="nav-item"> <a class="nav-link" href="about-us.html">About Us</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="contact-us.html">Contact Us</a> </li>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="search-engine-optimisation.html">SEO</a></li>
+                <li><a href="cyber-security.html">Cyber Secuirty</a></li>
+                <li><a href="server-management.html">Server Management & Monitoring</a></li>
+              </ul>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="email-hosting.html">Email Hosting</a></li>
           </ul>
-          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
+          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> 
+        </div>
       </div>
     </div>
   </div>
 </header>
-<!-- End Header --> 
+<!-- End Header -->  
 <main>
   <section class="g-bg-gray effect-section">
     <div class="mask bg-no-repeat opacity-3" style="background-image: url(images/map-bg.png);"></div>
@@ -498,51 +497,50 @@
     </div>
   </section>
 </main>
+<!--starting footer-->
 <footer class="footer">
   <div class="footer-top footer-border-dark">
     <div class="container">
       <div class="row justify-content-between">
         <div class="col-12 col-lg-4 m-15px-tb">
+          
           <div class="theme-bg p-25px border-radius-5 white-color">
-            <h5 class="m-20px-b"> Newsletter </h5>
-            <div class="form-group">
-              <label class="font-w-500">Join our newsletter</label>
-              <input type="text" name="Subscribe" placeholder="Email Address" class="form-control">
-              <button class="m-btn m-btn-theme2nd w-100 m-btn-radius m-10px-t">Subscibe</button>
-            </div>
-            <p class="font-small m-0px">We have strict anti-spam policy and send only one newsletter each month!</p>
+            <img class="logo-light" alt="" title="" src="images/logo.png">
+            <h5 class="m-20px-b"> Connect with Prohost</h5>
+            <p class="font-small m-0px"><b>Sales: </b>sales@prohost.sa</p><br>
+            <p class="font-small m-0px"><b>Support: </b>support@prohost.sa</p> <br>
+            <p class="font-small m-0px"><b>Mobile: </b>+966550243031(Whatsapp)</p><br>
+            <p class="font-small m-0px"><b>Phone: </b>8002444030</p>
           </div>
+          
         </div>
         <div class="col-6 col-lg-2 m-15px-tb">
-          <h5 class="footer-title">Servers & Cloud</h5>
+          <h5 class="footer-title">Hosting</h5>
           <ul class="list-unstyled links-dark footer-link-2">
             <li><a href="shared-hosting.html">Shared Hosting</a></li>
-            <li><a href="reseller-hosting.html">Reseller Hosting</a></li>
-            <li><a href="wordpress-hosting.html">WordPress Hosting</a></li>
+            <li><a href="windows-sql-hosting.html">SQL Hosting</a></li>
+            <li><a href="cloud-vps-server.html">Cloud VPS Servers</a></li>
             <li><a href="dedicated-server.html">Dedicated Server</a></li>
-            <li><a href="vps-server.html">VPS Server</a></li>
-            <li><a href="cloud-hosting.html">Cloud Hosting</a></li>
+            <li><a href="email-hosting.html">Email Hosting</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2 m-15px-tb">
-          <h5 class="footer-title">Backup & Security</h5>
+          <h5 class="footer-title">Support</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-            <li><a href="#">SSL Certificates</a></li>
-            <li><a href="#">Codeguard</a></li>
-            <li><a href="#">SiteLock</a></li>
-            <li><a href="#">Business Email</a></li>
-            <li><a href="#">Enterprise Email</a></li>
-            <li><a href="domain-register.html">Domain Register</a></li>
+            <li><a href="https://my.prohost.sa/submitticket.php">Open Ticket</a></li>
+            <li><a href="https://my.prohost.sa/supporttickets.php">Ticket</a></li>
+            <li><a href="https://my.prohost.sa/announcements">News</a></li>
+            <li><a href="https://my.prohost.sa/knowledgebase">Knowledgebase</a></li>
+            <li><a href="https://my.prohost.sa/serverstatus.php">Network Status</a></li>
           </ul>
         </div>
         <div class="col-6 col-lg-2 m-15px-tb">
           <h5 class="footer-title">Pages</h5>
           <ul class="list-unstyled links-dark footer-link-2">
-            <li> <a href="about-us.html">About Us</a> </li>
-            <li> <a href="contact-us.html">Contact Us</a> </li>
-            <li> <a href="blog.html">Blog</a> </li>
-            <li><a href="blog-details.html">Blog Detail</a></li>
-            <li><a href="blog-sidebar.html">Blog Sidebar</a></li>
+              <li><a href="about-us.html">About Us</a></li>
+              <li><a href="contact-us.html">Contact Us</a></li>
+              <li><a href="privacy-policy.html">Privacy Policy</a></li>
+              <li><a href="term-and-tonditions.html">Terms & Conditions</a></li>
           </ul>
         </div>
       </div>
@@ -552,10 +550,10 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-6 text-center text-md-left m-5px-tb">
-          <p class="m-0px font-small">© 2020 copyright all right reserved</p>
+          <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
-          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="#"><i class="fab fa-facebook-f"></i></a> <a href="#"><i class="fab fa-twitter"></i></a> <a href="#"><i class="fab fa-linkedin-in"></i></a> <a href="#"><i class="fab fa-instagram"></i></a> </div>
+          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a> </div>
         </div>
       </div>
     </div>
