Update some basic css

--- a/domain-register.html
+++ b/domain-register.html
@@ -12,6 +12,8 @@
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
+<link href="css/sa-domain.css" rel="stylesheet">
+
 </head>
 
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
