modify domain page

--- a/domain-register.html
+++ b/domain-register.html
@@ -128,7 +128,7 @@
 </section>
 <div class="grey-bg content-wrapper-8-5 relative" dir="ltr">
 <div class="container">
-<h1 class="mb-20">Domain Extension Price List</h1>
+<h1 class="mb-20">Saudi Arabia Domains Price List</h1>
 <div class="row">
 <div class="col-md-12">
 <div class="flex-container">
