--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
     </div>
   </section>
 </main>
+<!--
 <section class="p-30px-tb">
   <div class="container">
     <div class="row justify-content-center align-items-center">
@@ -516,7 +517,8 @@
       <div class="col m-15px-tb"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/">Get Started</a>  </div>
     </div>
   </div>
-</section>
+</section>-->
+
 <!--starting footer-->
 <footer class="footer">
   <div class="footer-top footer-border-dark">
