--- a/cyber-security.html
+++ b/cyber-security.html
@@ -236,8 +236,8 @@
       <div class="row md-m-25px-b m-45px-b justify-content-center text-center white-color">
         <div class="col-lg-8">
           <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small"> TESTIMONIALS</h6>
-          <h3 class="display-4 m-25px-b">Our Client Feedback</h3>
-          <p class="m-0px font-2">ProHost offers a comprehensive collection of operating systems and a full suite of tools and software required to operate any website, application, or system efficiently.</p>
+          <h3 class="display-4 m-25px-b">Why go with ProHost?</h3>
+          <!--<p class="m-0px font-2">ProHost offers a comprehensive collection of operating systems and a full suite of tools and software required to operate any website, application, or system efficiently.</p>-->
         </div>
       </div>
       <div class="row">
