--- a/usa-dedicated-server.html
+++ b/usa-dedicated-server.html
@@ -381,7 +381,7 @@
         <div class="col-lg-8">
           <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">CLIENT TESTIMONIALS</h6>
           <h3 class="display-4 m-25px-b">Why go with ProHost?</h3>
-          <p class="m-0px font-2">ProHost offers a comprehensive collection of operating systems and a full suite of tools and software required to operate any website, application, or system efficiently.</p>
+         <!-- <p class="m-0px font-2">ProHost offers a comprehensive collection of operating systems and a full suite of tools and software required to operate any website, application, or system efficiently.</p>-->
         </div>
       </div>
       <div class="row">
