email-hosting page create 3

--- a/email-hosting.html
+++ b/email-hosting.html
@@ -82,7 +82,13 @@
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
             </li>
-            <li class="nav-item"><a class="nav-link" href="email-hosting.html">Email Hosting</a></li>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Email Hosting</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+              <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="email-hosting.html">Email Hosting</a></li>
+                <li><a href="email-hosting-2.html">Email Hosting-2</a></li>
+                <li><a href="email-hosting3.html">Email Hosting-3</a></li>
+              </ul>
+            </li>
           </ul>
           <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> 
         </div>
