--- a/email-hosting3.html
+++ b/email-hosting3.html
@@ -104,7 +104,8 @@
       <div class="row justify-content-between align-items-center p-100px-t full-screen">
         <div class="col-lg-7 p-30px-tb">
           <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">ProHost</span> Email Hosting</div>
-          <h2 class="display-4 white-color m-25px-b">Get a Professional Email @yourdomain for your business.</h2>
+          <h2 class="display-4 white-color m-25px-b">Google Workspace
+          </h2>
           <p class="lead white-color-light">Prohost email hosting business can ensure that their emails are delivered quickly and securely. Prohost not only offers stable and secure email hosting, but also provides additional features such as spam filtering, data protection, and storage capacity.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
