--- a/Google-Workspace.html
+++ b/Google-Workspace.html
@@ -82,12 +82,12 @@
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">EMAIL & COLLABORATION</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#"> Email & Collaboration</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="file:///C:/Users/HP/Desktop/project/Prohost/Microsoft%20Office%20365.html">Microsoft Office 365
+                <li><a href="Microsoft-Office-365.html">Microsoft Office 365
                 </a></li>
-                <li><a href="file:///C:/Users/HP/Desktop/project/Prohost/Google%20Workspace.html">Google Workspace</a></li>
-                <li><a href="file:///C:/Users/HP/Desktop/project/Prohost/email-hosting.html">Email Hosting</a></li>
+                <li><a href="Google-Workspace.html">Google Workspace</a></li>
+                <li><a href="email-hosting.html">Email Hosting</a></li>
               </ul>
             </li>
           </ul>
