email page images update

--- a/Google-Workspace.html
+++ b/Google-Workspace.html
@@ -110,7 +110,7 @@
           <p class="lead white-color-light">Prohost email hosting business can ensure that their emails are delivered quickly and securely. Prohost not only offers stable and secure email hosting, but also provides additional features such as spam filtering, data protection, and storage capacity.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/vps-server.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/workspace.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
