New pictures addess

--- a/cloud-vps-windows.html
+++ b/cloud-vps-windows.html
@@ -102,7 +102,7 @@
           <p class="lead white-color-light">Our Windows hosting Packages are top quality reliable products made by our expert engineers resulting in powerful and secure software solutions for customers using the award-winning Windows Server ecosystem on top of our High-Quality Enterprise Servers.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/cloud-hosting.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting9.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
@@ -440,7 +440,7 @@
   <section class="section">
   <div class="container">
     <div class="row justify-content-between">
-      <div class="col-lg-6"> <img src="images/logos.png" title="" alt=""> </div>
+      <div class="col-lg-6"> <img src="images/hosting4.png" title="" alt=""> </div>
       <div class="col-lg-5 align-self-center">
         <h3 class="h2 m-15px-b">Deploy Unlimited Apps in One-Click</h3>
         <p class="m-0px font-2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum standard dummy text.</p>
