--- a/domain-register.html
+++ b/domain-register.html
@@ -122,7 +122,7 @@
             </div>
           </form>        
         <span class="font-small white-color-light links-white">Your Online Journey Starts With A Perfect Domain</span> </div>
-      <div class="col-lg-7"> <img class="max-width-120" src="images/domain-banner.svg" title="" alt=""> </div>
+      <div class="col-lg-7"> <img class="max-width-120" src="images/hosting11.png" title="" alt=""> </div>
     </div>
   </div>
 </section>
