--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -115,7 +115,7 @@
             choices</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/reseller-hosting.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/seo.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
