--- a/usa-dedicated-server.html
+++ b/usa-dedicated-server.html
@@ -102,7 +102,7 @@
           <p class="lead white-color-light">Our Dedicated Servers are connected to our redundant premium TIER II network for better connectivity and low latency, Our Backup Power Generators provide each server 100% uptime if the datacenter faces a power problem.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/banner-img.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/banner-3.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
