--- a/cloud-vps-linux.html
+++ b/cloud-vps-linux.html
@@ -102,7 +102,7 @@
           <p class="lead white-color-light">Pro Host VPS Hosting is powered by the commonly used software KVM and provides better performance, scalability, density, dynamic resource management, and ease of administration than the alternatives</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/banner-img.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting8.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
