--- a/server-management.html
+++ b/server-management.html
@@ -102,7 +102,7 @@
           <p class="lead white-color-light">Prohost has deployed cutting edge technology for servers management such as VMware vCenter which is an advanced server management software that provides a centralized platform for controlling vSphere environments for visibility across hybrid clouds and multiple servers.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/reseller-hosting.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting13.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
