--- a/windows-reseller-hosting.html
+++ b/windows-reseller-hosting.html
@@ -102,7 +102,7 @@
           <p class="lead white-color-light">We make setup of your web hosting business easy with our carefully designed Windows Reseller Hosting Plans. Our flexible Reseller Hosting plans offer plenty of disk space, ample bandwidth and complete email solutions to boost your venture.</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/reseller-hosting.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting10.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
